--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.tanat.ua.myapplication.MainActivity">
+    tools:context="com.tanat.ua.sportmanager.MainActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -29,7 +29,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="330dp"
             android:id="@+id/scrollView">
 
             <TextView
@@ -42,7 +42,9 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0dp">
 
             <Button
                 android:layout_width="wrap_content"
